# DFDG

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  ray_imgs.py  ray_student.py  ray_teacher.py  requirements.txt  tox.ini
datasets/: __init__.py  dataset_download.py  datasets.py  fake_datasets.py  teacher_download.py
dfdg/: __init__.py  __main__.py  utils.py
dfdg/datasets/: __init__.py  datasets.py  syn_datasets.py  utils.py
dfdg/download/: dataset_download.py  teacher_download.py
dfdg/evaluation/: evaluate.py  utils.py
dfdg/training/: train.py  train_img_base.py  train_img_multi_teacher.py  train_img_single_teacher.py  train_student_syn_img.py  utils.py
tests/: __init__.py  package.py  test_main.py
train_func_image/: __init__.py  train_func_imgs_base.py  train_func_imgs_multi_teacher.py  train_func_imgs_single_teacher.py
train_func_student/: __init__.py  train_func_student_image.py
utils/: __init__.py  dataset_utils.py  feature_matching.py  losses.py  utils.py
